# Qcap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
demo/: colab.ipynb  demo.sh
examples/exec_receipt/: README.md  run.sh  run_record.json
examples/model_custody/: README.md  modelcard.json  push_to_hub_example.py  run.sh  weights.stub
qcap/: __init__.py  canon.py  capsule.py  cli.py  hashing.py  hf.py  ledger.py  sign.py
schema/: audit-record.schema.json
scripts/: GITHUB_ABOUT.md  RELEASE_v0.1.0.md  set_github_about.ps1  update_release_v0.1.0.py
tests/: test_roundtrip.py  test_tamper_fixtures.py
tests/tamper/: README.md  build_fixtures.py  index.json  tamper-append-byte.qcap  tamper-payload.qcap  tamper-record.qcap  valid.qcap
