[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qcap"
version = "0.1.0"
description = "Verifiable execution provenance — signed, tamper-evident .qcap capsules"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Nuqasm" }]
keywords = ["provenance", "audit", "tamper-evident", "pqc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
pqc = ["liboqs-python>=0.14.1"]
hf = ["huggingface_hub>=0.20.0", "transformers>=4.40.0"]
dev = ["pytest>=8.0"]

[project.scripts]
qcap = "qcap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["qcap*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
